@@ -3,6 +3,10 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2007/11/01
+	* Removed code that queues OnAgitEliminate after the Emperium is broken,
+	  this is now done properly by the gvg script instead [ultramage]
+	- if you have any extra castles, update your scripts accordingly
 2007/10/31
 	* Added names to the SC_ and SI_ enums, now they can be used to properly
 	  indicate where such values are to be used (replaces usage of 'int')
