@@ -1,5 +1,8 @@
 Date		Added
 ======
+2007/11/01
+	* Added timers to trigger OnAgitEliminate after Emperium is broken
+	  (this was previously done from inside the source code) [ultramage]
 2007/10/31
 	* Rev. 11628 Fixed reward option in Arena giving potato. [L0ne_W0lf]
 	* Rev. 11626 Added Turbo Track point exchanger to arena. [L0ne_W0lf]
